// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSessionModal snapshot empty modal with leave option  1`] = `
<ModalDialog
  className="p-4 px-4.5"
  hasCloseButton={false}
  isFullscreenOnMobile={true}
  isOpen={true}
  onClose={[MockFunction utils.nullMethod]}
  size="md"
  title="test-header"
>
  <h3>
    test-header
  </h3>
  <Form.Group
    className="pt-3"
  >
    <Form.Label>
      test-hint
    </Form.Label>
    <Form.RadioSet
      className="pt-3 pb-4"
      name="sessions"
    >
      <Form.Radio
        value="leave"
      >
        Leave session
      </Form.Radio>
    </Form.RadioSet>
  </Form.Group>
  <ActionRow>
    <Button
      onClick={[MockFunction useSelectSessionModalData.closeSessionModal]}
      variant="tertiary"
    >
      Never mind
    </Button>
    <Button>
      Confirm Session
    </Button>
  </ActionRow>
</ModalDialog>
`;

exports[`SelectSessionModal snapshot modal with leave option  1`] = `
<ModalDialog
  className="p-4 px-4.5"
  hasCloseButton={false}
  isFullscreenOnMobile={true}
  isOpen={true}
  onClose={[MockFunction utils.nullMethod]}
  size="md"
  title="test-header"
>
  <h3>
    test-header
  </h3>
  <Form.Group
    className="pt-3"
  >
    <Form.Label>
      test-hint
    </Form.Label>
    <Form.RadioSet
      className="pt-3 pb-4"
      name="sessions"
    >
      <Form.Radio
        key="test-course-id-1"
        value="test-course-id-1"
      >
        02/01/2000
         - 
        02/01/2020
      </Form.Radio>
      <Form.Radio
        key="test-course-id-2"
        value="test-course-id-2"
      >
        03/02/2000
         - 
        03/02/2020
      </Form.Radio>
      <Form.Radio
        key="test-course-id-3"
        value="test-course-id-3"
      >
        04/03/2000
         - 
        04/03/2020
      </Form.Radio>
      <Form.Radio
        value="leave"
      >
        Leave session
      </Form.Radio>
    </Form.RadioSet>
  </Form.Group>
  <ActionRow>
    <Button
      onClick={[MockFunction useSelectSessionModalData.closeSessionModal]}
      variant="tertiary"
    >
      Never mind
    </Button>
    <Button>
      Confirm Session
    </Button>
  </ActionRow>
</ModalDialog>
`;

exports[`SelectSessionModal snapshot modal without leave option  1`] = `
<ModalDialog
  className="p-4 px-4.5"
  hasCloseButton={false}
  isFullscreenOnMobile={true}
  isOpen={true}
  onClose={[MockFunction utils.nullMethod]}
  size="md"
  title="test-header"
>
  <h3>
    test-header
  </h3>
  <Form.Group
    className="pt-3"
  >
    <Form.Label>
      test-hint
    </Form.Label>
    <Form.RadioSet
      className="pt-3 pb-4"
      name="sessions"
    >
      <Form.Radio
        key="test-course-id-1"
        value="test-course-id-1"
      >
        02/01/2000
         - 
        02/01/2020
      </Form.Radio>
      <Form.Radio
        key="test-course-id-2"
        value="test-course-id-2"
      >
        03/02/2000
         - 
        03/02/2020
      </Form.Radio>
      <Form.Radio
        key="test-course-id-3"
        value="test-course-id-3"
      >
        04/03/2000
         - 
        04/03/2020
      </Form.Radio>
    </Form.RadioSet>
  </Form.Group>
  <ActionRow>
    <Button
      onClick={[MockFunction useSelectSessionModalData.closeSessionModal]}
      variant="tertiary"
    >
      Never mind
    </Button>
    <Button>
      Confirm Session
    </Button>
  </ActionRow>
</ModalDialog>
`;
